     subclasses of RelationProperty) into the reverse reference. 
     The internal BackRef() is gone and backref() returns a plain 
     tuple that is understood by RelationProperty.
     
- sql
    - the autoincrement flag on column now indicates the column
      which should be linked to cursor.lastrowid, if that method
      is used.  See the API docs for details.
      
    - returning() support is native to insert(), update(),
      delete(). Implementations of varying levels of
      functionality exist for Postgresql, Firebird, MSSQL and
      Oracle. returning() can be called explicitly with column
      expressions which are then returned in the resultset,
      usually via fetchone() or first().

      insert() constructs will also use RETURNING implicitly to
      get newly generated primary key values, if the database
      version in use supports it (a version number check is
      performed). This occurs if no end-user returning() was
      specified.

    - Databases which rely upon postfetch of "last inserted id"
      to get at a generated sequence value (i.e. MySQL, MS-SQL)
      now work correctly when there is a composite primary key
      where the "autoincrement" column is not the first primary
      key column in the table.

    - the last_inserted_ids() method has been renamed to the
      descriptor "inserted_primary_key".

    - the Binary type now returns data as a Python string
      (or a "bytes" type in Python 3), instead of the built-
      in "buffer" type.  This allows symmetric round trips
      of binary data. [ticket:1524]
      
    - User-defined "default" and "onupdate" callables which 
      accept a context should now call upon 
      "context.current_parameters" to get at the dictionary
      of bind parameters currently being processed.  This
      dict is available in the same way regardless of 
      single-execute or executemany-style statement execution.
      
- engines