@@ -43,12 +43,23 @@ class QueryTest(TestBase):
         assert users.count().scalar() == 1
 
     def test_insert_heterogeneous_params(self):
-        users.insert().execute(
+        """test that executemany parameters are asserted to match the parameter set of the first."""
+        
+        assert_raises_message(exc.InvalidRequestError, 
+            "A value is required for bind parameter 'user_name', in parameter group 2",
+            users.insert().execute,
             {'user_id':7, 'user_name':'jack'},
             {'user_id':8, 'user_name':'ed'},
             {'user_id':9}
         )
-        assert users.select().execute().fetchall() == [(7, 'jack'), (8, 'ed'), (9, None)]
+
+        # this succeeds however.   We aren't yet doing 
+        # a length check on all subsequent parameters.
+        users.insert().execute(
+            {'user_id':7},
+            {'user_id':8, 'user_name':'ed'},
+            {'user_id':9}
+        )
 
     def test_update(self):
         users.insert().execute(user_id = 7, user_name = 'jack')
